Cart and cart item desing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     configurations.implementation {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
     }
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
