--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    aaptOptions {
+        ignoreAssetsPattern "!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~"
+    }
 }
 
 dependencies {
@@ -53,8 +57,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+//    //noinspection GradleCompatible
+//    implementation 'com.android.support:support-compat:28.0.0'
+//    //noinspection GradleCompatible
+//    implementation 'com.android.support:support-v4:28.0.0'
     configurations.implementation {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
     }
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'androidx.core:core:1.6.0'
+
 }
